demoProject/force-app/main/default/objects/Training_Attendee__c/fields/Course_Description__c.field-meta.xml
<CustomField>
    <fullName>Course_Description__c</fullName>
    <formula>Training_Course__r.Course_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Description</label>
    <type>Text</type>
</CustomField>