demoProject/force-app/main/default/objects/Training_Attendee__c/fields/Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_date__c</fullName>
    <formula>Training_Class__r.Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration date</label>
    <type>Date</type>
</CustomField>