demoProject/force-app/main/default/objects/Training_Attendee__c/fields/Training_Class__c.field-meta.xml
<CustomField>
    <fullName>Training_Class__c</fullName>
    <label>Training Class</label>
    <referenceTo>Training_Class__c</referenceTo>
    <relationshipLabel>Training Attendees</relationshipLabel>
    <relationshipName>Training_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>